set comment on this file

--- a/templates/allLessonAndHomePage/lessonCategories.html.twig
+++ b/templates/allLessonAndHomePage/lessonCategories.html.twig
@@ -107,6 +107,7 @@
                 </li>
             </ul>
         </div>
+        <!-- nothing -->
     </main>
 {% endblock %}
 {% block customizeJS %}
