--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@ a:hover:after{
 
 <section>
   <h1>Custom Cursor</h1>
-  <a href="facebook.com">Hover Me</a>
+  <a href="facebook.com">Hover M abizimis e</a>
 </section>
 <div class="cursor"></div>
 <div class="cursor2"></div>
